# chess

./: .gitignore  pyproject.toml
app/: __init__.py
app/Chess/: chess.py
app/chess_game/: __init__.py  chess.py
app/main/: __init__.py  events.py  forms.py  routes.py
app/static/scripts/: chess.js
app/templates/: chess.html  index.html  login.html
