[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["nektoman <kuvalda008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-SocketIO = "^5.2.0"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
